--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <span class="author-block">
                 <a href="https://dominik.win">Dominik Winecki</a>,</span>
               <span class="author-block">
-                <a href="https://arnab.org">Arnab Nandi</a>,</span>
+                <a href="https://arnab.org">Arnab Nandi</a></span>
             </div>
 
             <div class="is-size-5 publication-authors">
