--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Render(t) = match t {
           <h2 class="title is-3">Performance</h2>
           <div class="content has-text-justified">
             <p>
-              Our optimizer improves the efficiency of V2V processing by 3&times; on average:
+              Our optimizer improves the efficiency of V2V processing by 3&times; on average.
             </p>
 
             <img src="static/images/plots.svg" alt="V2V Performance"
