--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">The Ohio State University</span>
-              <p class="author-block"><em>To appear at <a href="https://icde2024.github.io/DEFT.html">ICDE 2024</a></em></p>
+              <p class="author-block"><br/><em>To appear at <a href="https://icde2024.github.io/DEFT.html">ICDE 2024</a></em></p>
             </div>
 
             <div class="column has-text-centered">
