--- a/index.html
+++ b/index.html
@@ -215,10 +215,14 @@ Render(t) = match t {
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@inproceedings{winecki2024_v2v,
-        title        = {V2V: Efficiently Synthesizing Video Results for Video Queries},
-        author       = {Winecki, Dominik and Nandi, Arnab},
-        year         = 2024,
-        booktitle    = {2024 IEEE 40th International Conference on Data Engineering (ICDE)}
+  author={Winecki, Dominik and Nandi, Arnab},
+  booktitle={2024 IEEE 40th International Conference on Data Engineering (ICDE)}, 
+  title={V2V: Efficiently Synthesizing Video Results for Video Queries}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={5614-5621},
+  doi={10.1109/ICDE60146.2024.00449}
 }</code></pre>
     </div>
   </section>
