--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">The Ohio State University</span>
-              <p class="author-block"><br/><em>To appear at <a href="https://icde2024.github.io/DEFT.html">ICDE 2024</a></em></p>
+              <p class="author-block"><em>To appear at <a href="https://icde2024.github.io/DEFT.html">ICDE 2024</a></em></p>
             </div>
 
             <div class="column has-text-centered">
@@ -50,14 +49,14 @@
                     <span>Paper</span>
                   </a>
                 </span>
-                <!-- <span class="link-block">
-                  <a href="https://example.com" class="external-link button is-normal is-rounded is-dark">
+                <span class="link-block">
+                  <a href="https://doi.org/10.1109/ICDE60146.2024.00449" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="ai ai-arxiv"></i>
+                      <i class="ai ai-ieee"></i>
                     </span>
-                    <span>arXiv</span>
+                    <span>IEEE</span>
                   </a>
-                </span> -->
+                </span>
                 <!-- Video Link. -->
                 <!-- <span class="link-block">
                   <a href="https://example.com" class="external-link button is-normal is-rounded is-dark">
