--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <p class="author-block"><em>To appear at <a href="https://icde2024.github.io/DEFT.html">ICDE 2024</a></em></p>
+              <p class="author-block"><em><a href="https://icde2024.github.io/DEFT.html">ICDE 2024</a></em></p>
             </div>
 
             <div class="column has-text-centered">
